--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ layout: default
     <div class="animated-logo">
       <img src="{{ site.institution.logo | relative_url }}" alt="Logo" class="logo-img pulse">
     </div>
+    <div class="flag-banner">
+      <img src="https://jusata.github.io/notiatanasiano/assets/images/bandera-girardota.png" alt="Bandesra de Girardota" class="flag-img">
+    </div>
     <h1 class="animated-title">{{ site.title }}</h1>
     <div class="quote-container">
       <blockquote id="daily-quote" class="daily-quote fade-in">
