Primer commit - Periódico Digital

--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@ layout: default
         <div class="video-container">
           {% if site.data.videos[0] %}
           
-<iframe 
-  width="100%" 
-  height="315" 
-  src="https://www.youtube.com/watch?v=yyUjreBm68E&list=RDyyUjreBm68E&start_radio=1" 
-  frameborder="0" 
+<iframe
+  width="100%"
+  height="315"
+  src="https://www.youtube.com/embed/videoseries?list=RDyyUjreBm68E"
+  frameborder="0"
+  allow="autoplay; encrypted-media; clipboard-write; picture-in-picture"
   allowfullscreen>
 </iframe>
           {% endif %}
