--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ layout: default
 <iframe
   width="100%"
   height="315"
-  src="https://www.youtube.com/embed/videoseries?list=RDyyUjreBm68E"
+  src="https://www.youtube.com/watch?v=mdojOu2Uk8g&list=WL"
   frameborder="0"
   allow="autoplay; encrypted-media; clipboard-write; picture-in-picture"
   allowfullscreen>
